# qt

videoplay/: CMakeLists.txt  ffmpeg.cpp  ffmpeg.h  main.cpp  mediaStream.cpp  mediaStream.h  mediaStream.ui  videoplay.cpp  videoplay.h  videoplay.ui
videoplay/ffmpeg-N-102781-g05f9b3a0a5-win64-gpl-shared/include/libavutil/: ffversion.h
videoplay/ffmpeg-N-102781-g05f9b3a0a5-win64-gpl-shared/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
videoplay/helpui/: helpform.cpp  helpform.h  helpform.ui
videoplay/res/: readme.md  version.md
